--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
         <div class="contact_1">
 
-            <a href="mailto:someone@example.com?Subject=He
+            <a href="mailto:someone@example.com?Subject=Hello">
                 <i class=""></i>&nbsp;&nbsp;<h3>mygmailid@gmail.com</h3>
             </a>
 
